--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "myapp",
   "version": "0.0.0",
   "private": true,
+  
   "scripts": {
     "start": "node ./bin/www"
+  },
+  "scripts": {
+    "start": "node server.js"
   },
   "dependencies": {
     "chokidar": "^3.5.3",
@@ -13,6 +17,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nunjucks": "^3.2.3",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "express": "^4.18.2"
   }
 }
